@@ -214,24 +214,6 @@
 			<version>${jersey.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-		    <groupId>com.sun.jersey.jersey-test-framework</groupId>
-		    <artifactId>jersey-test-framework-embedded-glassfish</artifactId>
-		    <version>${jersey.version}</version>
-		    <scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>com.sun.jersey.jersey-test-framework</groupId>
-		    <artifactId>jersey-test-framework-external</artifactId>
-		    <version>${jersey.version}</version>
-		    <scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>com.sun.jersey.jersey-test-framework</groupId>
-		    <artifactId>jersey-test-framework-grizzly2</artifactId>
-		    <version>1.19.4</version>
-		    <scope>test</scope>
-		</dependency>
 		
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
