@@ -1,9 +1,12 @@
 package de.ids_mannheim.korap.config;
 
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.util.zip.GZIPInputStream;
 
 import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.output.ByteArrayOutputStream;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,11 +21,10 @@ public class NamedVCLoader {
     private FullConfiguration config;
     @Autowired
     private SearchKrill searchKrill;
-    
+
     private static Logger jlog = LogManager.getLogger(NamedVCLoader.class);
 
-    public void loadVCToCache ()
-            throws IOException {
+    public void loadVCToCache () throws IOException {
 
         String dir = config.getNamedVCPath();
         File d = new File(dir);
@@ -34,23 +36,45 @@ public class NamedVCLoader {
             if (!file.exists()) {
                 throw new IOException("File " + file + " is not found.");
             }
-            else if (!file.getName().endsWith(".jsonld")) {
-                throw new IOException("File " + file
-                        + " is not allowed. Filename must ends with .jsonld");
-            }
 
-            long start = System.currentTimeMillis();
-            String json = FileUtils.readFileToString(file, "utf-8");
+            long start, end;
+            String json;
+            String filename = file.getName();
+
+            if (file.getName().endsWith(".jsonld")) {
+                filename = filename.substring(0, filename.length() - 7);
+                start = System.currentTimeMillis();
+                json = FileUtils.readFileToString(file, "utf-8");
+                end = System.currentTimeMillis();
+            }
+            else if (filename.endsWith(".jsonld.gz")) {
+                filename = filename.substring(0, filename.length() - 10);
+                start = System.currentTimeMillis();
+
+                GZIPInputStream gzipInputStream =
+                        new GZIPInputStream(new FileInputStream(file));
+                ByteArrayOutputStream bos = new ByteArrayOutputStream(512);
+                bos.write(gzipInputStream);
+                json = bos.toString("utf-8");
+                bos.close();
+                end = System.currentTimeMillis();
+            }
+            else {
+                System.err.println("File " + filename
+                        + " is not allowed. Filename must ends with .jsonld or .jsonld.gz");
+                continue;
+            }
+            jlog.debug(
+                    "READ " + file.getName() + " duration: " + (end - start));
+
             KrillCollection collection = new KrillCollection(json);
             collection.setIndex(searchKrill.getIndex());
-            
-            String filename = file.getName();
-            filename = filename.substring(0,filename.length()-7);
+
             if (collection != null) {
                 collection.storeInCache(filename);
             }
-            long end = System.currentTimeMillis();
-            jlog.debug(filename + " duration: " + (end - start));
+            end = System.currentTimeMillis();
+            jlog.debug(filename + "caching duration: " + (end - start));
             jlog.debug("memory cache: "
                     + KrillCollection.cache.calculateInMemorySize());
         }
